# shopit-be-rust-old

./: Cargo.toml  README.md  Rocket.toml
src/: app.rs  lib.rs  main.rs
src/controllers/: product_controller.rs
src/data/: db.rs
src/router/: routes.rs
src/routes/: auth.rs  mod.rs  product_routes.rs  user.rs
tests/: basic_test.rs
tests/common/: mod.rs
