[package]
name = "shopit-be-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
mongodb = "2.0.1"
serde = { version = "1.0.130", features = ["derive"] }
rocket_contrib = { version = "0.4.10", features = ["helmet", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rand = "0.8.4"
rust-argon2 = "0.8.3"
chrono = { version = "0.4.19", features = ["serde"] }

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.68"
# cargo add r2d2 r2d2-mongodb dotenv futures chrono thiserror
